[package]
name    = "goal-digger"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
aomi-sdk   = "=3.0.3"
schemars   = "1.0.4"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest    = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rand       = "0.8"
tokio      = { version = "1", features = ["rt-multi-thread", "macros"] }
